- Fixed bug #33433 (strtoll not available on Tru64). (Jani, Derick)
- Fixed bug #33415 (strtotime() related bugs). (Derick)
- Fixed bug #32660 (Assignment by reference causes crash when field access is
  overloaded (__get)). (Dmitry)
- Fixed bug #31358 (Older GCC versions do not provide portable va_copy()).
  (Jani)
- Fixed bug #31158 (array_splice on $GLOBALS crashes). (Dmitry)
- Fixed bug #30828 (debug_backtrace() reports incorrect class in overridden
  methods). (Dmitry)
- Fixed bug #30519 (Interface not existing says Class not found). (Dmitry)
- Fixed bug #30096 (gmmktime does not return the corrent time). (Derick)
- Fixed bug #30052 (Crash on shutdown after odbc_pconnect()). (Edin)
- Fixed bug #28377 (debug_backtrace is intermittently passing args). (Dmitry)
- Fixed bug #28072 (static array with some constant keys will be incorrectly
  ordered). (Dmitry)
- Fixed bug #27268 (Bad references accentuated by clone). (Dmitry)

22 Jun 2005, PHP 5.1 Beta 2
- Improved PHP extension loading mechanism with support for module dependencies
  and conflicts. (Jani, Dmitry) 
- Allowed return by reference from internal functions. (Marcus, Andi, Dmitry)
- Rewrote strtotime() with support for timezones and many new formats.
  Implements feature requests #21399, #26694, #28088, #29150, #29585 and
  #29595. (Derick)
- Added bindto socket context option. (Ilia)
- Added offset parameter to the stream_copy_to_stream() function. (Ilia)
- Added offset & length parameters to substr_count() function. (Ilia)
- Fixed inheritance check to control return by reference and pass by reference
  correctly (ArrayAccess can no longer support references correctly).
  (Marcus, Andi, Dmitry)
- Fixed PDO shutdown problem (possible inifite loop running rollback on
  shutdown). (Wez)
- Fixed PECL bug #3714 (PDO: beginTransaction doesn't work if you're in
  auto-commit mode). (Wez)
- Fixed bug #33427 (ext/odbc: check if unixODBC header file exists). (Jani)